--- a/style.css
+++ b/style.css
@@ -1,183 +1,192 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #334e64;
-    font-family: 'Montserrat', sans-serif;
+
+body{
+    background: #000000; 
+    background: -webkit-linear-gradient(to right, #38ef7d, #11998e); 
+    background: linear-gradient(to right, #38ef7d, #11998e); 
 }
 
-body {
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #11998e;
-    margin: 70px;
-    margin-left: 50px;
-    background: -webkit-linear-gradient(to right, #0529f5, #11998e);
-    background: linear-gradient(to right, #38ef7d, #11998e);
-}
-
-.profile-container {
+.card {
     position: relative;
+    height: 500px;
+    width: 300px;
     background-color: #fff;
-    width: 350px;
-    padding: 100px 50px 40px;
-    border-radius: 19px;
-    box-shadow: 0 0 60px 5px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: 100px auto;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.img-container {
-    width: 130px;
-    height: 130px;
-    overflow: hidden;
-    border: 5px solid #11998e;
-    border-radius: 50%;
-    box-shadow: 0 8px 55px #11998e;
+.header {
     position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 250px;
+    width: 95%;
+    margin:0 auto;
+    left: 0;
+    right: 0;
+    top: -30px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-image: linear-gradient(to right, #1dd1a1, #1abc9c);
 }
 
-.img-container img {
-    width: 100%;
-    max-width: 100%;
-    transform: scale(1.1);
-    margin-top: 5px;
-}
-
-.info {
-    margin-bottom: 12px;
-    text-align: center;
-}
-
-.info i {
-    margin-right: 8px;
-    font-size: 1.1em;
-}
-
-.place {
-    margin-bottom: 40px;
-}
-
-.full-name {
-    font-size: 1.4em;
-    font-weight: bold;
-    letter-spacing: 1px;
-    color: #11998e;
-}
-
-.posts-info {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 1.1em;
-    letter-spacing: 0.5px;
-    margin-bottom: 30px;
-    text-align: center;
-    text-align: center;
-}
-
-.posts-info span {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 4px;
-}
-
-.social-container {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.social-container i {
-    color: #fff;
-}
-
-.social-container button {
-    border: none;
-    outline: none;
-    width: 45px;
-    height: 45px;
+.header img {
+    position: absolute;
+    height: 120px;
+    width: 120px;
     border-radius: 50%;
-    font-size: 1.2em;
+    left: 85px;
+    top: 22px;
+	margin-left: 0px;
+}
+
+.header h3 {
+    position: relative;
+    font-family: sans-serif;
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    top: 118px;
+    left: 85px;
+	margin-left: 10px;
+}
+
+.header p {
+    position: absolute;
+    font-family: sans-serif;
+    color: rgb(236, 233, 233);
+    font-size: 13px;
+    top: 168px;
+    left: 95px
+	
+}
+
+.body {
+    position: absolute;
+    height: 126px;
+    left: 5px;
+    right: 5px;
+    top: 52%;
+    border-radius: 12px;
+}
+
+.body ul {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    
+}
+
+.body ul li {
+    position: absolute;
+    list-style: none;
+    display: block;
+    height: 40px;
+    width: 100%;
+    left: 0;
+    right: 0;
+    border-radius: 12px;
+    background-color: transparent;
+    transition: all .3s ease-in-out;
+}
+
+.body ul li p,
+h3,
+i {
+    position: absolute;
+}
+
+.body ul li h3 {
+    top: -17px;
+    left: 58px;
+    color: #16a085;
+    
+}
+
+.body ul li p {
+    top: 14px;
+    left: 59px;
+    font-size: 12px;
+    font-family: sans-serif;
+    color: #16a085;
+}
+
+.body ul li i {
+    left: 8px;
+    top: 7px;
+    color: #16a085;
+    font-size: 26px;
+}
+
+.body ul li:nth-child(1) {
+    top: -16px;
+}
+
+.body ul li:nth-child(2) {
+    top: 26px;
+}
+
+.body ul li:nth-child(3) {
+    top: 68px;
+}
+
+.body ul li:nth-child(1) i {
+    left: 12px;
+}
+
+.body li:hover {
+    background-color: #16a085;
     cursor: pointer;
-    box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.15);
-    transition: transform 0.3s;
 }
 
-.social-container button:hover {
-    transform: scale(1.1);
+.body li:hover i{color:#fff}
+.body li:hover h3{color:#fff}
+.body li:hover p{color:#fff}
+/*footer*/
+
+.footer {
+    position: absolute;
+    height: 80px;
+    bottom: -30px;
+    left: 0;
+    right: 0;
+    border-radius: 12px;
+    width:95%;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-image: linear-gradient(to right, #1dd1a1, #1abc9c);
 }
 
-/* Social colors */
-
-.social-container button.youtube {
-    background: linear-gradient(45deg, #ff000088, #ff8800);
+.footer ul {
+    position: absolute;
+    left: -60px;
 }
 
-.social-container button.linkedin {
-    background: linear-gradient(45deg, #33333388, #333333);
+.footer ul li {
+    display: inline-block;
+    margin-left: 60px;
 }
 
-.social-container button.instagram {
-    background: linear-gradient(45deg, #e6683ccc 25%, #dc2743 50%,
-            #bc1888 100%);
+.footer ul li i {
+    font-size: 30px;
+    color: #000;
+    transition: all .3s ease-in;
 }
 
-.social-container button.github {
-    background: linear-gradient(45deg, #33333388, #333333);
-}
-
-.action {
-    outline: none;
-    cursor: pointer;
+.footer ul li:hover i {
+    transform: scale(0.9);
     color: #fff;
-    background-color: #11998e;
-    border: none;
-    border-radius: 10px;
-    padding: 12px 20px;
-    width: 80%;
-    margin-top: 25px;
-    box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.2);
-    text-transform: uppercase;
-    font-size: 1em;
-    font-weight: bold;
-    letter-spacing: 2px;
-    transition: transform 0.3s, opacity 0.3s;
+    cursor: pointer;
 }
 
-.action.message {
-    background-color: #202124;
-}
-
-.action:hover {
-    transform: scale(1.05);
-    opacity: 0.85;
-}
-
-.credit a {
+.credit a{
     text-decoration: none;
-    color: #11998e;
-}
+    color: #fff;
+    
+  }
 
-.credit {
-    margin-top: 10px;
+  .credit{
     text-align: center;
-}
+  }
 
-@media screen and (min-width: 400px) {
-    body{
-        margin-left: 0%;
-        
-    }
-}
